--- a/src/index.html
+++ b/src/index.html
@@ -27,29 +27,29 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say"> Our Story</span><br>
+			        	<span class="say"> 最初的开始</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> For  龙宝宝 &amp;  龙宝宝 </span><br>
+			        	<span class="say"> For  占雯 &amp;  黄佳辉 </span><br>
 						<span class="say"> </span><br>
-                        <span class="say"> 还记得我们相识的时候吗, 或许是缘分，或许是注定的。</span><br>
+                        <span class="say"> 开始还是蛮意外的</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 就像一场梦一样,有开心,也有吵闹。</span><br>
+			        	<span class="say"> 我想现在的争吵可能让你很累。</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 彼此依赖，彼此关心，彼此温暖，谢谢你这么包容我，喜欢我，爱我。</span><br>
+			        	<span class="say"> 但是我喜欢你，这一点没有变</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我也爱你的善良，温柔，就是太容易吃醋了。。。</span><br>
+			        	<span class="say"> 我太喜欢碎碎念了，我也很讨厌这样的自己</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我性格好多缺点你也都看到。。。</span><br>
+			        	<span class="say"> 又做出了吓到你的事情</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我想要和你在一起真实的感受生命，和你生活在一起,嫁给我吧！</span><br>
+			        	<span class="say"> 我真诚的道歉，我想和你继续感受生活，带给你甜甜的恋爱，宝贝</span><br>
                         <span class="say"> </span><br>
                         <span class="say"> ..永远的..</span><br>
 						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>龙宝宝 与 龙宝宝</span>
+                        <span class="say"><span class="space"></span>占雯 与 黄佳辉</span>
 			        </div>
                 </div>
                 <div id="clock-box">
-                    龙宝宝<span class="STYLE1">与</span>龙宝宝<span class="STYLE1">已经相识了</span>
+                    占雯<span class="STYLE1">与</span>黄佳辉<span class="STYLE1">在一起了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
@@ -191,7 +191,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(1996, 11,16); 			//时间年月日
+		    together.setFullYear(2021, 2,13); 			//时间年月日
 		    together.setHours(12);						//小时	
 		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
