--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 						<span class="say"> </span><br>
 			        	<span class="say"> For  占雯 &amp;  黄佳辉 </span><br>
 						<span class="say"> </span><br>
-                        <span class="say"> 开始还是蛮意外的</span><br>
+                        <span class="say"> 开始还是蛮意外的，很奇妙的感觉</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say"> 我想现在的争吵可能让你很累。</span><br>
 						<span class="say"> </span><br>
@@ -41,7 +41,9 @@
 						<span class="say"> </span><br>
 			        	<span class="say"> 又做出了吓到你的事情</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say"> 我真诚的道歉，我想和你继续感受生活，带给你甜甜的恋爱，宝贝</span><br>
+			        	<span class="say"> 我真诚的道歉，我想和你继续感受生活，带给你甜甜的恋爱，宝贝。</span><br>
+							 <span class="say"> </span><br>
+						<span class="say">我不想看到下面的时间停止！ </span><br>
                         <span class="say"> </span><br>
                         <span class="say"> ..永远的..</span><br>
 						<span class="say"> </span><br>
