--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,7 @@
 							 <span class="say"> </span><br>
 						<span class="say">我不想看到下面的时间停止！ </span><br>
                         <span class="say"> </span><br>
-                        <span class="say"> ..永远的..</span><br>
-						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>占雯 与 黄佳辉</span>
+                        <span class="say"> ..永远的..     占雯 与 黄佳辉</span><br>
 			        </div>
                 </div>
                 <div id="clock-box">
